refactor(backend): change end point to users api
